# shaderc-interactive

./: .prettierrc.json  README.md  package.json
src/: App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/src/: compile_shader.rs  main.rs
src-tauri/src/compile_shader/: annotated_disassembly.rs  module_info.rs
src/lib/: fisherYates.ts  makeColors.ts  shaderc.ts
