[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
opt-level = "s"
strip = true
panic = "abort"
# incremental = false
lto = true

[build-dependencies]
tauri-build = { version = "1.0.0-rc.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.7", features = ["api-all", "devtools"] }
shaderc = "0.8.0"
eyre = "0.6.8"
lazy_static = "1.4.0"
color-eyre = "0.6.1"
itertools = "0.10.3"
spirv = { version = "0.2.0", features = ["serialize", "deserialize"] }
rspirv = "0.11.0"
